<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Mytem</string>
    <string name="dashboard_barcode">読取</string>
    <string name="dashboard_history">履歴</string>

	<!-- バグレポート送信時のダイアログ文字列 -->
	<string name="bugreport_title">バグレポート送信</string>
	<string name="bugreport_message">バグレポートを開発者へ送信します。よろしいですか？</string>
	<string name="dialog_yes">はい</string>
	<string name="dialog_no">いいえ</string>

	<!-- QRコードスキャナーのインストール問合せダイアログ -->
	<string name="no_qrcode_title">QRコードスキャナーインストール</string>
	<string name="no_qrcode_message">QRコードスキャナーをAndroid Marketからインストールしますか？</string>

	<!-- GAE通信文字列 -->
	<string name="sql_local_error">ローカルデータ問い合わせでエラーが発生しました</string>
	<string name="sql_gae_error">サーバー問い合わせでエラーが発生しました</string>
	<string name="sql_unknown_error">原因不明のエラーが発生しました</string>
	<string name="sql_complete">登録完了</string>
	<string name="sql_already_created">既に登録されています</string>
	<string name="sql_gae_entry_error">サーバーへの登録に失敗しました</string>
	<string name="sql_local_entry_error">ローカルへの登録に失敗しました</string>

	<string name="jan_code">JANコード</string>
	
	<!-- 読取完了画面で利用の文字列 -->	
	<string name="item_title">商品情報</string>
	<string name="item_name">商品名</string>
	<string name="mytem_all_history">登録履歴</string>
	<string name="create_history">履歴登録</string>
	<string name="mytem_history">自分の履歴</string>
	<string name="social_history">みんなの履歴</string>
	
	<!-- 登録画面で利用の文字列 -->
	<string name="create_products">商品</string>
	<string name="create_time">時間</string>
	<string name="create_create">登録 </string>
	<string name="create_set_image_message">画像をセットしてください\n（NoImageをタッチ）</string>
	<string name="create_set_name_message">商品名を入力してください</string>
	<string name="create_fill_form_message">入力項目を埋めてください</string>
	<string name="create_quick_action_gallery">ギャラリー</string>
	<string name="create_quick_action_camera">カメラ</string>

	<!-- 商品履歴画面で利用の文字列 -->
	<string name="history_products">商品購入情報</string>
	<string name="history_shop_message">購入店名を入力してください</string>
	<string name="history_number_message">数字を入力してください</string>
	<string name="history_date_title">購入日付</string>
	<string name="history_date_message">日付を選択してください</string>
	<string name="history_fill_form_message">入力項目を埋めてください</string>
	<string name="history_shopname">購入店名</string>
	<string name="history_price">購入時値段</string>
	<string name="history_note">コメント</string>
	
	<!-- 登録画面の登録情報確認ダイアログで利用の文字列 -->
	<string name="dialog_create_verification_title">これで登録しますか？</string>
	<string name="dialog_create_verification_create">登録</string>
	<string name="dialog_create_verification_back">戻る</string>

	<!-- 警告 -->
	<string name="alert_messeage">警告</string>
	<string name="No_Storage_Message">SDカードを挿入してください</string>
	
	<!-- ダイアログ -->
	<string name="dialog_message">処理中です...</string>
</resources>
